# magic-umbrella

./: .claudeignore  .clauderc  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  demo.py  interactive_demo.py  pyproject.toml
.devcontainer/: devcontainer.json
config/: README.md  categories.example.yaml  customers.example.yaml  projects.example.yaml
plan/: plan.md
plan/details/: phase-0-azure-registration.md  phase-0-configuration.md  phase-0-dev-environment.md  phase-0-project-setup.md  phase-1-oauth-flow.md  phase-2-llm-classifier.md  phase-2-rule-classifier.md  phase-3-time-calculator.md  phase-4-interactive-review.md
research/: initial-research.md
src/magic_umbrella/: __init__.py  example.py
src/magic_umbrella/auth/: __init__.py  authenticator.py
src/magic_umbrella/calendar/: __init__.py  mock_client.py  models.py
src/magic_umbrella/categorization/: __init__.py  rule_classifier.py
src/magic_umbrella/config/: __init__.py  loader.py
src/magic_umbrella/reporting/: __init__.py  interactive_review.py  terminal_output.py  time_calculator.py
tests/: __init__.py  test_auth.py  test_calendar.py  test_categorization.py  test_example.py  test_reporting.py
